Proj1b complete